Fix: scrollbar fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ body {
     background-color: var(--background-color) !important;
 
     ::-webkit-scrollbar {
-        width: 13px;
+        width: 12px;
     }
 
     ::-webkit-scrollbar-track {
